[gd_scene load_steps=42 format=2]

[ext_resource path="res://sprites/font/PixulBrush.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://sprites/background/sky bg.png" type="Texture" id=2]
[ext_resource path="res://sprites/buttons or icons/big biscuit.png" type="Texture" id=3]
[ext_resource path="res://sprites/buttons or icons/x button.png" type="Texture" id=4]
[ext_resource path="res://sprites/buttons or icons/publish button.png" type="Texture" id=5]
[ext_resource path="res://sprites/buttons or icons/long divider.png" type="Texture" id=6]
[ext_resource path="res://sprites/buttons or icons/save button.png" type="Texture" id=7]
[ext_resource path="res://sprites/buttons or icons/add question button.png" type="Texture" id=8]
[ext_resource path="res://sprites/buttons or icons/biscuit popup.png" type="Texture" id=9]
[ext_resource path="res://sprites/buttons or icons/publish now button.png" type="Texture" id=11]
[ext_resource path="res://sprites/buttons or icons/schedule button.png" type="Texture" id=12]
[ext_resource path="res://Teacher/create quiz/QuizCreationPage.gd" type="Script" id=13]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=3]
default_font = SubResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=5]
default_font = SubResource( 4 )

[sub_resource type="DynamicFont" id=6]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=7]
default_font = SubResource( 6 )

[sub_resource type="DynamicFont" id=8]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=9]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=10]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=11]
default_font = SubResource( 10 )

[sub_resource type="DynamicFont" id=12]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=13]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=14]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=19]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=20]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=21]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=22]
default_font = SubResource( 21 )

[sub_resource type="DynamicFont" id=23]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=24]
default_font = SubResource( 23 )

[sub_resource type="DynamicFont" id=25]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=26]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=27]
default_font = SubResource( 26 )

[sub_resource type="DynamicFont" id=28]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=29]
default_font = SubResource( 28 )

[sub_resource type="DynamicFont" id=30]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=31]
default_font = SubResource( 30 )

[sub_resource type="DynamicFont" id=32]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=33]
size = 32
font_data = ExtResource( 1 )

[node name="QuizCreationPage" type="CanvasLayer"]
script = ExtResource( 13 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QnBackground" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -880.0
margin_top = -500.0
margin_right = 874.0
margin_bottom = 506.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuizNameInput" type="LineEdit" parent="."]
margin_left = 152.0
margin_top = 88.0
margin_right = 960.0
margin_bottom = 150.0
custom_fonts/font = SubResource( 1 )
align = 1
placeholder_text = "Quiz Name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HourDropdown" type="OptionButton" parent="."]
margin_left = 320.0
margin_top = 168.0
margin_right = 432.0
margin_bottom = 226.0
theme = SubResource( 3 )
text = "1"
align = 1
items = [ "1", null, false, 0, null, "2", null, false, 1, null, "3", null, false, 2, null, "4", null, false, 3, null, "5", null, false, 4, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TriesDropdown" type="OptionButton" parent="."]
margin_left = 864.0
margin_top = 168.0
margin_right = 960.0
margin_bottom = 227.0
theme = SubResource( 5 )
text = "1"
align = 1
items = [ "1", null, false, 0, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopicDropdown" type="OptionButton" parent="."]
margin_left = 1104.0
margin_top = 88.0
margin_right = 1632.0
margin_bottom = 146.0
theme = SubResource( 7 )
text = "Fraction"
align = 1
items = [ "Fraction", null, false, 0, null, "Ratio", null, false, 1, null, "Numbers", null, false, 2, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="TextureButton" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AddQnButton" type="TextureButton" parent="."]
anchor_right = 0.1
margin_left = 8.0
margin_top = 80.0
margin_right = -144.0
margin_bottom = 120.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveButton" type="TextureButton" parent="."]
margin_left = 664.0
margin_top = 872.0
margin_right = 968.0
margin_bottom = 996.0
texture_normal = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PublishButton" type="TextureButton" parent="."]
margin_left = 1008.0
margin_top = 872.0
margin_right = 1336.0
margin_bottom = 992.0
texture_normal = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HourLabel" type="Label" parent="."]
margin_left = 152.0
margin_top = 176.0
margin_right = 296.0
margin_bottom = 228.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "hours:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MinLabel" type="Label" parent="."]
margin_left = 472.0
margin_top = 176.0
margin_right = 584.0
margin_bottom = 228.0
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "mins:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MinDropdown" type="OptionButton" parent="."]
margin_left = 592.0
margin_top = 168.0
margin_right = 704.0
margin_bottom = 228.0
theme = SubResource( 11 )
custom_fonts/font = SubResource( 12 )
text = "5"
align = 1
items = [ "5", null, false, 0, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TriesLabel" type="Label" parent="."]
margin_left = 728.0
margin_top = 176.0
margin_right = 852.0
margin_bottom = 228.0
custom_fonts/font = SubResource( 13 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "tries:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CloseButton" type="TextureButton" parent="."]
margin_left = 1688.0
margin_top = 88.0
margin_right = 1767.0
margin_bottom = 160.0
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuestionLabel" type="Label" parent="."]
margin_left = 216.0
margin_top = 280.0
margin_right = 424.0
margin_bottom = 332.0
custom_fonts/font = SubResource( 14 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Question"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExcerptLabel" type="Label" parent="."]
margin_left = 616.0
margin_top = 280.0
margin_right = 824.0
margin_bottom = 332.0
custom_fonts/font = SubResource( 14 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Excerpt"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LongDivider" type="TextureRect" parent="."]
margin_left = 160.0
margin_top = 336.0
margin_right = 1776.0
margin_bottom = 376.0
texture = ExtResource( 6 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LongDivider2" type="TextureRect" parent="."]
margin_left = 160.0
margin_top = 816.0
margin_right = 1776.0
margin_bottom = 856.0
texture = ExtResource( 6 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_left = 176.0
margin_top = 376.0
margin_right = 1768.0
margin_bottom = 800.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
custom_constants/separation = 100

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 1608.0
margin_top = 224.0
margin_right = 1736.0
margin_bottom = 336.0
texture_normal = ExtResource( 8 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PublishPopup" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -476.0
margin_top = -376.0
margin_right = 476.0
margin_bottom = 376.0
texture = ExtResource( 9 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HoursLabel" type="Label" parent="PublishPopup"]
margin_left = 380.0
margin_top = 228.0
margin_right = 456.0
margin_bottom = 280.0
custom_fonts/font = SubResource( 19 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "hrs"

[node name="MinsLabel" type="Label" parent="PublishPopup"]
margin_left = 644.0
margin_top = 228.0
margin_right = 744.0
margin_bottom = 280.0
custom_fonts/font = SubResource( 20 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "mins"

[node name="HoursOptionButton" type="OptionButton" parent="PublishPopup"]
margin_left = 228.0
margin_top = 220.0
margin_right = 348.0
margin_bottom = 278.0
theme = SubResource( 22 )
text = "0"
align = 1
items = [ "0", null, false, 0, null, "1", null, false, 1, null, "2", null, false, 2, null, "3", null, false, 3, null, "4", null, false, 4, null, "7", null, false, 5, null, "Item 6", null, false, 6, null, "Item 7", null, false, 7, null, "8", null, false, 8, null, "9", null, false, 9, null, "10", null, false, 10, null, "11", null, false, 11, null, "12", null, false, 12, null, "13", null, false, 13, null, "14", null, false, 14, null, "15", null, false, 15, null, "16", null, false, 16, null, "17", null, false, 17, null, "18", null, false, 18, null, "19", null, false, 19, null, "20", null, false, 20, null, "21", null, false, 21, null, "22", null, false, 22, null, "23", null, false, 23, null, "24", null, false, 24, null ]
selected = 0

[node name="MinsOptionButton" type="OptionButton" parent="PublishPopup"]
margin_left = 500.0
margin_top = 220.0
margin_right = 624.0
margin_bottom = 278.0
theme = SubResource( 24 )
text = "10"
align = 1
items = [ "5", null, false, 0, null, "10", null, false, 1, null, "15", null, false, 2, null, "20", null, false, 3, null, "25", null, false, 4, null, "30", null, false, 5, null, "35", null, false, 6, null, "40", null, false, 7, null, "45", null, false, 8, null, "50", null, false, 9, null, "55", null, false, 10, null, "0", null, false, 1, null ]
selected = 1

[node name="PublishDateTime" type="Label" parent="PublishPopup"]
margin_left = 76.0
margin_top = 300.0
margin_right = 868.0
margin_bottom = 352.0
custom_fonts/font = SubResource( 25 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Publish on: "

[node name="ScheduleButton" type="TextureButton" parent="PublishPopup"]
margin_left = 212.0
margin_top = 372.0
margin_right = 716.0
margin_bottom = 488.0
texture_normal = ExtResource( 12 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PublishNowButton" type="TextureButton" parent="PublishPopup"]
margin_left = 140.0
margin_top = 508.0
margin_right = 820.0
margin_bottom = 620.0
texture_normal = ExtResource( 11 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopupCloseButton" type="TextureButton" parent="PublishPopup"]
margin_left = 796.0
margin_top = 116.0
margin_right = 852.0
margin_bottom = 164.0
texture_normal = ExtResource( 4 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DayDropdown" type="OptionButton" parent="PublishPopup"]
margin_left = 228.0
margin_top = 140.0
margin_right = 348.0
margin_bottom = 198.0
theme = SubResource( 27 )
text = "1"
align = 1
items = [ "1", null, false, 0, null, "2", null, false, 1, null, "3", null, false, 2, null, "4", null, false, 3, null, "5", null, false, 4, null, "6", null, false, 5, null, "7", null, false, 6, null, "8", null, false, 7, null, "9", null, false, 8, null, "10", null, false, 9, null, "11", null, false, 10, null, "12", null, false, 11, null, "13", null, false, 12, null, "14", null, false, 13, null, "15", null, false, 14, null, "16", null, false, 15, null, "17", null, false, 16, null, "18", null, false, 17, null, "19", null, false, 18, null, "20", null, false, 19, null, "21", null, false, 20, null, "22", null, false, 21, null, "23", null, false, 22, null, "24", null, false, 23, null, "25", null, false, 24, null, "26", null, false, 25, null, "27", null, false, 26, null, "28", null, false, 27, null, "29", null, false, 28, null, "30", null, false, 29, null, "31", null, false, 30, null ]
selected = 0

[node name="MonthOptionButton" type="OptionButton" parent="PublishPopup"]
margin_left = 436.0
margin_top = 140.0
margin_right = 556.0
margin_bottom = 200.0
theme = SubResource( 29 )
text = "1"
align = 1
items = [ "1", null, false, 0, null, "2", null, false, 1, null, "3", null, false, 2, null, "4", null, false, 3, null, "5", null, false, 4, null, "6", null, false, 5, null, "7", null, false, 6, null, "8", null, false, 7, null, "9", null, false, 8, null, "10", null, false, 9, null, "11", null, false, 10, null, "12", null, false, 11, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="YearOptionButton" type="OptionButton" parent="PublishPopup"]
margin_left = 636.0
margin_top = 140.0
margin_right = 789.0
margin_bottom = 198.0
theme = SubResource( 31 )
text = "2021"
align = 1
items = [ "2021", null, false, 0, null, "2022", null, false, 1, null, "2023", null, false, 2, null, "2024", null, false, 3, null, "2025", null, false, 4, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DateLabel" type="Label" parent="PublishPopup"]
margin_left = 76.0
margin_top = 148.0
margin_right = 204.0
margin_bottom = 200.0
custom_fonts/font = SubResource( 32 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Date:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeLabel" type="Label" parent="PublishPopup"]
margin_left = 76.0
margin_top = 228.0
margin_right = 196.0
margin_bottom = 280.0
custom_fonts/font = SubResource( 33 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Time:"
__meta__ = {
"_edit_use_anchors_": false
}
